Code and Documentation Optimization.